crates/nidus/tests/ui/openapi_unsupported_key.stderr
error: #[openapi] supports only summary = "...", tags = ["..."], status = 201, request = Type, and response = Type metadata
 --> tests/ui/openapi_unsupported_key.rs:9:5
  |
9 |     #[openapi(description = "Find user by ID")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `openapi` (in Nightly builds, run with -Z macro-backtrace for more info)
